Fixed bug #28822: ArrayObject::offsetExists() works inverted